--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
   "packageManager": "yarn@3.6.3",
   "dependencies": {
     "@actions/core": "^1.10.1",
-    "@actions/exec": "^1.1.1",
-    "addressparser": "^1.0.1",
-    "openpgp": "^5.11.0"
+    "@actions/exec": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.6.0",
@@ -42,7 +40,7 @@
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.6.4",
-    "prettier": "^3.0.3",
+    "prettier": "^3.3.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
