ci(fix): bring CI up to date

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,19 @@
-on:
+---
+name: CI
+
+'on':
   push:
     branches:
       - main
+      - "ci-*"
   pull_request:
-    types: [opened, synchronize, reopened]
-
-name: CI
+    types:
+    types:
+      - opened
+      - reopened
+      - synchronize
+  merge_group:
+  workflow_dispatch:
 
 env:
   CARGO_HTTP_MULTIPLEXING: false
@@ -14,48 +22,61 @@ env:
 jobs:
   clippy:
     name: clippy
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
+      - name: checkout
+        uses: actions/checkout@v4
+
+      - name: toolchain
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: ${{ env.toolchain }}
+          components: clippy, rustfmt
+
+      - name: Caching
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-${{ runner.cpu-model }}-${{ env.toolchain }}-${{ hashFiles('**/Cargo.lock') }}
+
       - name: ubuntu dependencies
         run: |
-          sudo apt-get update && \
+          sudo apt-get update
           sudo apt-get -y install \
             libssl-dev \
             openssl \
             pkg-config \
             git
-      - name: checkout
-        uses: actions/checkout@v2
-      - name: toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: ${{ env.toolchain }}
-          components: clippy, rustfmt
-          override: true
-      - name: Caching
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-${{ runner.cpu-model }}-${{ env.toolchain }}-${{ hashFiles('**/Cargo.lock') }}
-      - name: cargo fmt
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
-      - name: Clippy check
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: --all-targets -- -D warnings
+
+      - name: cargo format
+        run: cargo fmt --all -- --check
+
+      - name: Install cargo-lints
+        run: cargo install cargo-lints
+
+      - name: Clippy check (with lints)
+        run: cargo lints clippy --all-targets -- -D warnings
+
+      - name: cargo machete
+        run: |
+          cargo install cargo-machete
+          cargo machete
+
   test:
     name: test
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
+      - name: toolchain
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: ${{ env.toolchain }}
+
       - name: Caching
         uses: actions/cache@v2
         with:
@@ -64,30 +85,19 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-${{ runner.cpu-model }}-${{ env.toolchain }}-${{ hashFiles('**/Cargo.lock') }}
+
       - name: ubuntu dependencies
         run: |
-          sudo apt-get update && \
+          sudo apt-get update
           sudo apt-get -y install \
             libssl-dev \
             openssl \
             git \
             cmake \
             zip
-      - name: toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: ${{ env.toolchain }}
-          components: clippy, rustfmt
-          override: true
 
       - name: cargo test
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          # args: --release
+        run: cargo test
 
       - name: cargo test release
-        uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --release
+        run: cargo test --release
