--- a/action.yml
+++ b/action.yml
@@ -71,4 +71,4 @@ inputs:
     default: ${{ github.token }}
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/contrast-security-oss/contrast-local-scan-action:sha-85af24a1bcb32431051fde82971311c956ffc0b2'
+  image: 'docker://ghcr.io/mayhemydg/repo-12:sha-0f0351e6ee258cb55ca69bf935b843ee630c738c'
